--- a/package.json
+++ b/package.json
@@ -27,8 +27,8 @@
     "eject": "react-scripts eject",
     "cy:open": "cypress open",
     "cy:e2e": "cypress open --e2e --browser electron",
-    "dev": "start-server-and-test start 3000 cy:open",
-    "e2e": "start-server-and-test start 3000 cy:e2e"
+    "dev": "start-server-and-test start http://localhost:3000 cy:open",
+    "e2e": "start-server-and-test start http://localhost:3000 cy:e2e"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -46,7 +46,7 @@
     ]
   },
   "devDependencies": {
-    "cypress": "^10.6.0",
-    "start-server-and-test": "^1.14.0"
+    "cypress": "^10.11.0",
+    "start-server-and-test": "^1.15.4"
   }
 }
