--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,6 +8,10 @@ jobs:
         uses: actions/checkout@v2
       # Install NPM dependencies, cache them correctly
       # and run all Cypress tests
+      - name: Print Node.js version
+        run: |
+          node --version
+          npm --version
       - name: Cypress run
         uses: cypress-io/github-action@v4
         with:
